# phi-guard

./: LICENSE  README.md  pyproject.toml
examples/: leaky_app.py
phi_guard/: __init__.py  config.py  patterns.py  redactor.py  streaming.py
phi_guard/adapters/: json_logger.py  langfuse_adapter.py  otel.py
phi_guard/backends/: base.py  llm_backend.py  presidio_backend.py  regex_backend.py
tests/: test_adapters.py  test_patterns.py  test_redactor.py  test_streaming.py
