[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phi-guard"
version = "0.1.0"
description = "PHI-aware observability middleware for healthcare AI — redact before you trace"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["HIPAA", "PHI", "healthcare", "observability", "LLM", "redaction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = []

[project.optional-dependencies]
langfuse = ["langfuse>=2.0"]
otel = ["opentelemetry-sdk>=1.20", "opentelemetry-api>=1.20"]
llm-backend = ["anthropic>=0.20"]
examples = ["anthropic>=0.20", "langfuse>=2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.urls]
Repository = "https://github.com/gitsukrit/phi-guard"
Issues = "https://github.com/gitsukrit/phi-guard/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
